src/gui/rhi/qrhimetal.mm
@@ -6022,6 +6022,7 @@ void QMetalSwapChain::destroy()
 #endif
 
     d->layer = nullptr;
+    m_proxyData = {};
 
     [d->curDrawable release];
     d->curDrawable = nil;
